styling the input field when changing the name and prevent counter name overflow

--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ h1 {
   ); */
   background: var(--main-dark);
   width: 70%;
+  width: 70%;
   min-width: 250px;
   max-width: 750px;
   margin: 0 auto;
@@ -46,6 +47,9 @@ h1 {
   color: var(--text-light);
   height: 140px;
 }
+.counter-name::-webkit-scrollbar { 
+  display: none;  /* Safari and Chrome */
+}
 
 .counter-name-container {
   display: flex;
@@ -55,6 +59,10 @@ h1 {
   text-align: left;
   margin: 0;
   font-size: 2rem;
+  width: 60vw;
+  max-width: 690px;
+  overflow: auto;
+  white-space: nowrap;
   /* display: inline; */
 }
 
@@ -178,4 +186,15 @@ h1 {
   color: #72543c;
   font-size: 1.5rem;
   margin: 0 1rem 1rem;
+}
+input[type='text'] {
+  background-color: transparent;
+  color: var(--text-light);
+  font-family: inherit;
+  font-size: 2rem;
+  width: 50vw;
+  max-width: 700px;
+  margin-right: 0.5rem;
+  height: 40px;
+  border-color: 1px solid var(--text-light);
 }
